just sync everything xD

--- a/src/components/Globals/Code.astro
+++ b/src/components/Globals/Code.astro
@@ -24,7 +24,7 @@ const { code, title="code" } = Astro.props;
             </div>
             <p class="text-dark-200 select-none">{title}</p>
         </div>
-        <div class="py-4">
+        <div class="py-4 overflow-y-auto">
             <code>
                 <pre>{code}</pre>
             </code>
