--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -19,7 +19,7 @@ const { title, headings, description, githubEditUrl } = Astro.props;
             <h1 class="text-5xl font-bold mt-6">{title}</h1>
             <p class="text-xl font-thin mt-4">{description}</p>
         </div>
-        <div class="sticky top-0">
+        <div class="non-sticky top-0">
             <BaseContainer>
                 <nav class="block">
                     <TableOfContents client:media="(max-width: 70em)" headings={headings} />
