change title style

--- a/src/components/Globals/CodeBlockNew.astro
+++ b/src/components/Globals/CodeBlockNew.astro
@@ -12,7 +12,9 @@ const {
     remoteURL,
 } = Astro.props;
 
-let { code } = Astro.props;
+let {
+    code
+} = Astro.props;
 
 
 const hasLang = !!lang;
