--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -15,9 +15,11 @@ const { title, headings, description, githubEditUrl } = Astro.props;
 
 <article id="article" class="content mx-4 w-[700px]">
     <section class="main-section">
-        <div class="mb-4">
-            <h1 class="text-5xl font-bold mt-6">{title}</h1>
-            <p class="text-xl font-thin mt-4">{description}</p>
+        <div class="my-10 border-l-2 border-white">
+            <div class="bg-white w-fit px-2">
+                <h1 class="text-5xl font-bold text-primary-dark">{title}</h1>
+            </div>
+            <p class="text-xl text-dark font-thin pt-2 pl-2">{description}</p>
         </div>
         <div class="non-sticky top-0 z-50">
             <BaseContainer>
