add just a bit of padding

--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -16,7 +16,7 @@ const { title, headings, description, githubEditUrl } = Astro.props;
 <article id="article" class="content mx-4 w-[700px]">
     <section class="main-section">
         <div class="my-10 border-l-2 border-white">
-            <div class="bg-white w-fit px-2">
+            <div class="bg-white w-fit px-2 py-1">
                 <h1 class="text-5xl font-bold text-primary-dark">{title}</h1>
             </div>
             <p class="text-xl text-dark font-thin pt-2 pl-2">{description}</p>
