--- a/src/components/Globals/H2.astro
+++ b/src/components/Globals/H2.astro
@@ -2,7 +2,9 @@
 const props = Astro.props;
 ---
 
-<h2 {...props} class="text-3xl font-medium mt-10">
-    <slot/>
-</h2>
-<hr class="h-px my-3 border-0 bg-gradient-to-r from-dark-200 to-transparent">
+<div class="sticky top-0 bg-primary-dark z-50">
+    <h2 {...props} class="text-3xl font-medium py-3 mt-10">
+        <slot/>
+    </h2>
+    <hr class="h-px border-0 bg-gradient-to-r from-dark-200 to-transparent">
+</div>
