change design for blocks

--- a/src/components/Globals/Definition.astro
+++ b/src/components/Globals/Definition.astro
@@ -10,7 +10,7 @@ export interface Props {
 }
 ---
 
-<div class="bg-dark-50 text-gray-900 dark:text-white p-4 border-l-8 border-l-green-900 mt-6">
+<div class="text-gray-900 dark:text-white pl-4 py-2 border-l-8 border-l-green-900 mt-6">
     <div class="mb-4">
         <p class="font-bold text-lg">{term}</p>
     </div>
