--- a/src/components/Globals/Think.astro
+++ b/src/components/Globals/Think.astro
@@ -12,7 +12,7 @@ const {
 
 ---
 
-<div class="bg-dark-50 text-gray-900 dark:text-white p-4 border-l-8 border-l-blue-900 mt-6">
-    <p class="italic">Just think for a moment:</p>
+<div class="bg-dark-49 text-gray-900 dark:text-white pl-4 py-2 mt-6 border-l-8 border-l-blue-900 text-justify">
+    <p class="font-bold">Just think for a moment:</p>
     <p class="mt-2" set:html={markToHtml(note)}></p>
 </div>
