--- a/src/components/Figures/Canvas.astro
+++ b/src/components/Figures/Canvas.astro
@@ -5,5 +5,7 @@ const {description="Please insert the description of this figure"} = Astro.props
 ---
 <div id="figure" class="flex flex-col items-center border-[0.3px] border-dark-100 my-4">
     <slot/>
-    <p set:html={markToHtml(description)} class="py-4"></p>
+    <div class="py-4">
+        <p set:html={markToHtml(description)}></p>
+    </div>
 </div>
