yolo just update

--- a/src/components/Globals/H2.astro
+++ b/src/components/Globals/H2.astro
@@ -2,7 +2,7 @@
 const props = Astro.props;
 ---
 
-<div class="sticky top-0 bg-primary-dark z-50">
+<div class="bg-primary-dark z-50">
     <h2 {...props} class="text-3xl font-medium py-3 mt-10">
         <slot/>
     </h2>
