--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -15,8 +15,8 @@ const lang = getLanguageFromURL(currentPage);
     <nav class="flex items-center justify-between mx-8" title="Top Navigation">
         <div class="logo flex">
             <a href="/" class="flex items-center">
-                <Logo size={40} />
-                <h2 class="text-white font-thin text-2xl pl-4">{SITE.title ?? 'Documentation'}</h1>
+                <Logo size={36} />
+                <span class="text-white font-thin text-2xl pl-4 font-outfit">{SITE.title ?? 'Documentation'}</span>
             </a>
         </div>
         <div style="flex-grow: 1;"></div>
