--- a/src/components/Globals/BaseContainer.astro
+++ b/src/components/Globals/BaseContainer.astro
@@ -1,4 +1,4 @@
-<div class="p-px bg-gradient-to-br from-dark-100 via-transparent to-dark-100 mt-6">
+<div class="p-px bg-gradient-to-br from-dark-100 via-transparent to-dark-100 mt-6 shadow-sm shadow-dark-50">
     <div class="bg-primary-dark">
         <slot/>
     </div>
