links open new tab

--- a/src/components/Globals/A.astro
+++ b/src/components/Globals/A.astro
@@ -2,6 +2,6 @@
 const props = Astro.props;
 ---
 
-<a {...props} class="border-b border-white hover:border-b-2">
+<a {...props} class="border-b border-white hover:border-b-2" target="_blank" rel="noopener noreferrer">
     <slot/>
 </a>
