open link in new tab

--- a/src/components/Globals/Definition.astro
+++ b/src/components/Globals/Definition.astro
@@ -19,7 +19,6 @@ export interface Props {
     </div>
     <div class="mt-4 ml-4">
         <span>- </span>
-        <a href={link} class="border-b hover:border-b-2">{source}</a>
+        <a href={link} target="_blank" rel="noopener noreferrer" class="border-b hover:border-b-2">{source}</a>
     </div>
-
 </div>
