--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -38,7 +38,7 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
         <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.js" integrity="sha384-tsPOhveNsi36uhglzMBNOAA2xd7LlEqQuQHFKi4DwP+6UKrrLGub1MD77Zx18F8e" crossorigin="anonymous"></script>
     </head>
 
-    <body class="bg-primary-dark font-roboto text-white text-base leading-relaxed">
+    <body class="bg-primary-dark font-roboto text-white text-base leading-loose">
         <Header currentPage={currentPage} />
         <main class="flex justify-center">
             <!-- <aside class="p-4 w-72 bg-dark-50 absolute left-0 z-50" title="Site Navigation"> -->
