--- a/src/components/Globals/P.astro
+++ b/src/components/Globals/P.astro
@@ -2,4 +2,4 @@
 const props = Astro.props;
 ---
 
-<p {...props} class="text-justify mt-6 text-gray-300"><slot/></p>
+<p {...props} class="mt-6 text-gray-300"><slot/></p>
