fix CodeBlock resize issue

--- a/src/components/Globals/CodeBlock.astro
+++ b/src/components/Globals/CodeBlock.astro
@@ -58,7 +58,7 @@ if (hasRemoteURL){
             code={code}
             lang={lang}
 
-            class="bg-primary-dark py-4"
+            class="bg-primary-dark py-4 w-full"
         />
 
 
