--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -15,7 +15,7 @@ type Props = {
 const { title, headings, description, githubEditUrl } = Astro.props;
 ---
 
-<article id="article" class="content mx-4 w-[700px]">
+<article id="article" class="content mx-6 max-w-[700px] min-w-0">
     <section class="main-section">
         <div class="my-10 border-l-2 border-white">
             <div class="w-fit px-2 py-1">
