--- a/src/components/Globals/H2.astro
+++ b/src/components/Globals/H2.astro
@@ -6,5 +6,5 @@ const props = Astro.props;
     <h2 {...props} class="text-3xl font-medium py-3 mt-10">
         <slot/>
     </h2>
-    <hr class="h-px border-0 bg-gradient-to-r from-dark-200 to-transparent">
+    <hr class="h-px border-0 bg-gradient-to-r from-dark-200 to-transparent mb-6">
 </div>
