first functional prototype for slides

--- a/src/components/Globals/H2.astro
+++ b/src/components/Globals/H2.astro
@@ -3,7 +3,7 @@ const props = Astro.props;
 ---
 
 <div class="bg-primary-dark z-50">
-    <h2 {...props} class="text-3xl font-medium py-3 mt-10">
+    <h2 {...props} class="text-3xl font-medium py-3 mt-10 presentation-slide presentation-section">
         <slot/>
     </h2>
     <hr class="h-px border-0 bg-gradient-to-r from-dark-200 to-transparent mb-6">
