--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,6 +1,25 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
 
+import A from '../components/Globals/A.astro'
+import Pre from '../components/Globals/Pre.astro'
+import InlineCode from '../components/Globals/InlineCode.astro'
+import _CodeBlock from '../components/Globals/_CodeBlock.astro'
+import Em from '../components/Globals/Em.astro'
+import H1 from '../components/Globals/H1.astro'
+import H2 from '../components/Globals/H2.astro'
+import H3 from '../components/Globals/H3.astro'
+import H4 from '../components/Globals/H4.astro'
+import H5 from '../components/Globals/H5.astro'
+import H6 from '../components/Globals/H6.astro'
+import Hr from '../components/Globals/Hr.astro'
+import Img from '../components/Globals/Img.astro'
+import Ul from '../components/Globals/Ul.astro'
+import Ol from '../components/Globals/Ol.astro'
+import Li from '../components/Globals/Li.astro'
+import Strong from '../components/Globals/Strong.astro'
+import P from '../components/Globals/P.astro'
+
 import { getEntry } from "astro:content";
 // 1. Get the slug from the incoming server request
 const { slug } = Astro.params;
@@ -19,5 +38,24 @@ const { Content, headings } = await entry.render();
 ---
 
 <MainLayout headings={headings} {...entry.data}>
-	<Content />
+    <Content components={{
+        a: A,
+        pre: Pre,
+        pre: InlineCode,
+        code: _CodeBlock,
+        em: Em,
+        h1: H1 ,
+        h2: H2,
+        h3: H3,
+        h4: H4,
+        h5: H5,
+        h6: H6,
+        hr: Hr,
+        img: Img,
+        ul: Ul,
+        ol: Ol,
+        li: Li,
+        strong: Strong,
+        p: P
+    }} />
 </MainLayout>
