make CodeBlock more easy to use

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -4,7 +4,6 @@ import MainLayout from '../layouts/MainLayout.astro';
 import A from '../components/Globals/A.astro'
 import Pre from '../components/Globals/Pre.astro'
 import InlineCode from '../components/Globals/InlineCode.astro'
-import _CodeBlock from '../components/Globals/_CodeBlock.astro'
 import Em from '../components/Globals/Em.astro'
 import H1 from '../components/Globals/H1.astro'
 import H2 from '../components/Globals/H2.astro'
@@ -40,9 +39,8 @@ const { Content, headings } = await entry.render();
 <MainLayout headings={headings} {...entry.data}>
     <Content components={{
         a: A,
-        pre: Pre,
-        pre: InlineCode,
-        code: _CodeBlock,
+        // pre: Pre,
+        // pre: InlineCode,
         em: Em,
         h1: H1 ,
         h2: H2,
