--- a/src/components/Globals/CodeBlock.astro
+++ b/src/components/Globals/CodeBlock.astro
@@ -7,7 +7,7 @@ import '../../styles/prism-theme.css';
 
 
 const {
-    lang,
+    lang = "plain",
     filename,
     remoteURL,
 } = Astro.props;
@@ -25,9 +25,27 @@ const hasRemoteURL = !!remoteURL;
 
 const showHeader = hasLang || hasFileName;
 
+function isValidUrl(urlString) {
+    try {
+        new URL(urlString);
+        return true;
+    } catch (error) {
+        console.log(error)
+        return false;
+    }
+}
+
 if (hasRemoteURL){
-    const response = await fetch(remoteURL);
-    code = await response.text();
+    try {
+        const response = await fetch(remoteURL);
+        if (!response.ok) {
+            code = `HTTP error! Status: ${response.status}. Remote URL: ${remoteURL}`;
+        } else {
+            code = await response.text();
+        }
+    } catch {
+        code = `Failed to fetch remote code from ${remoteURL}`
+    }
 }
 ---
 
@@ -56,11 +74,9 @@ if (hasRemoteURL){
 
         <Prism
             code={code}
-            lang={lang}
+            lang={hasLang ? lang : "plain"}
 
             class="bg-primary-dark py-4 w-full"
         />
-
-
     </figure>
 </BaseContainer>
