--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+span.icon-link::before {
+  border: none;
+  content: '#';
+  font-size: 0.5em;
+  vertical-align: top;
+  margin-left: 10px;
+  opacity: 0.7;
+}
