--- a/src/components/Globals/A.astro
+++ b/src/components/Globals/A.astro
@@ -1,6 +1,25 @@
 ---
 const props = Astro.props;
 ---
+<style is:global>
+
+/* remove the default style of the `A` component */
+h2 a {
+    border: none;
+    text-decoration: none;
+}
+
+/* this is to style the link element added by `rehype-autolink-headings` */
+span.icon-link::before {
+  border: none;
+  content: '#';
+  color: gray;
+  font-size: 0.5em;
+  vertical-align: top;
+  margin-left: 5px;
+  opacity: 0.4;
+}
+</style>
 
 <a {...props} class="border-b border-white hover:border-b-2">
     <slot/>
