--- a/src/components/Globals/A.astro
+++ b/src/components/Globals/A.astro
@@ -9,12 +9,31 @@ h2 a, h3 a, h4 a {
     text-decoration: none;
 }
 
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {
+    border: none;
+    text-decoration: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+h2:hover a,
+h3:hover a,
+h4:hover a,
+h5:hover a,
+h6:hover a {
+  opacity: 1; /* Show the link when hovering over the parent */
+}
+
 /* this is to style the link element added by `rehype-autolink-headings` */
 span.icon-link::before {
   border: none;
   content: '#';
   color: gray;
-  font-size: 0.6em;
+  font-size: 1em;
   vertical-align: top;
   margin-left: 5px;
   opacity: 0.4;
