--- a/src/components/Presentations/Presentation.astro
+++ b/src/components/Presentations/Presentation.astro
@@ -41,6 +41,8 @@
   transition: transform 300ms ease-in-out;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: var(--color-base);
   color: var(--color-on-base);
   box-sizing: border-box;
