--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,5 +3,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .csl-entry {
-  @apply py-2;
+  @apply my-4 text-gray-300;
 }
