fix background color inline latex

--- a/src/components/Globals/CodeBlock.astro
+++ b/src/components/Globals/CodeBlock.astro
@@ -132,7 +132,7 @@ pre[class*="language-"] {
   padding: .1em .3em;
   border-radius: .3em;
   color: #c9d1d9;
-  background: #343942;
+  /* background: #343942; */
 }
 /* Line highlighting */
 pre[data-line] {
