--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,3 +5,36 @@
 .csl-entry {
   @apply my-4 text-gray-300;
 }
+
+[data-tooltip] {
+  @apply relative inline-block cursor-pointer;
+}
+
+/* The tooltip element that appears on hover */
+[data-tooltip]::after {
+  @apply absolute invisible opacity-0 
+         bg-dark-100 text-white text-sm py-2 px-3
+         w-max max-w-xs break-words text-left z-50
+         left-1/2 transform -translate-x-1/2 bottom-full mb-2 border
+         shadow-lg transition-opacity duration-200;
+  content: attr(data-tooltip);
+}
+
+/* Arrow for the tooltip */
+[data-tooltip]::before {
+
+  @apply absolute invisible opacity-0
+         w-0 h-0 z-50
+         left-1/2 transform -translate-x-1/2 bottom-full
+         border-solid border-8 border-transparent border-t-gray-800
+         transition-opacity duration-200;
+  content: '';
+
+  margin-bottom: -6px;
+}
+
+/* Show tooltip and arrow on hover */
+[data-tooltip]:hover::after,
+[data-tooltip]:hover::before {
+  @apply visible opacity-100;
+}
