--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,7 @@
 }
 
 [data-tooltip] {
-  @apply relative inline-block cursor-pointer;
+  @apply relative cursor-pointer;
 }
 
 /* The tooltip element that appears on hover */
