--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -18,6 +18,7 @@ import Li from '../components/Globals/Li.astro'
 import Strong from '../components/Globals/Strong.astro'
 import P from '../components/Globals/P.astro'
 import Table from '../components/Globals/Table.astro'
+import Blockquote from '../components/Globals/Blockquote.astro'
 
 import { getEntry } from "astro:content";
 // 1. Get the slug from the incoming server request
@@ -37,23 +38,24 @@ const { Content, headings } = await entry.render();
 ---
 
 <MainLayout headings={headings} {...entry.data}>
-    <Content components={{
-        a: A,
-        code: InlineCode,
-        em: Em,
-        h1: H1 ,
-        h2: H2,
-        h3: H3,
-        h4: H4,
-        h5: H5,
-        h6: H6,
-        hr: Hr,
-        img: Img,
-        ul: Ul,
-        ol: Ol,
-        li: Li,
-        strong: Strong,
-        p: P,
-        table: Table
-    }} />
+  <Content components={{
+    a: A,
+    code: InlineCode,
+    em: Em,
+    h1: H1 ,
+    h2: H2,
+    h3: H3,
+    h4: H4,
+    h5: H5,
+    h6: H6,
+    hr: Hr,
+    img: Img,
+    ul: Ul,
+    ol: Ol,
+    li: Li,
+    strong: Strong,
+    p: P,
+    table: Table,
+    blockquote: Blockquote
+  }} />
 </MainLayout>
