add better italics

--- a/src/components/Globals/Blockquote.astro
+++ b/src/components/Globals/Blockquote.astro
@@ -2,6 +2,6 @@
 const props = Astro.props;
 ---
 
-<blockquote class="mx-12 italic">
+<blockquote class="mx-12 italic font-pt">
   <slot />
 </blockquote>
