--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -56,6 +56,6 @@ const { Content, headings } = await entry.render();
     strong: Strong,
     p: P,
     table: Table,
-    blockquote: Blockquote
+    blockquote: Blockquote,
   }} />
 </MainLayout>
