--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+/* family of serif */
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 .csl-entry {
   @apply my-4 text-gray-300;
@@ -37,4 +41,9 @@
 [data-tooltip]:hover::after,
 [data-tooltip]:hover::before {
   @apply visible opacity-100;
+}
+
+math {
+  /* same as the p element */
+  @apply mt-6;
 }
