--- a/src/components/Globals/Definition.astro
+++ b/src/components/Globals/Definition.astro
@@ -12,11 +12,11 @@ if (Astro.slots.has("default")) {
 }
 ---
 
-<div class="text-gray-900 dark:text-white pl-4 py-2 border-l-8 border-l-green-900 mt-6">
+<aside class="text-gray-900 dark:text-white pl-4 py-2 border-l-8 border-l-green-900 mt-6">
     <div class="mb-4">
       <p class="text-lg">Definition: <dfn>{term}</dfn></p>
     </div>
     <div class="text-justify text-gray-300">
         <p set:html={html}></p>
   </div>
-</div>
+</aside>
