--- a/src/components/Globals/Math/MathDefinition.astro
+++ b/src/components/Globals/Math/MathDefinition.astro
@@ -1,6 +1,14 @@
 ---
 const { content } = Astro.props;
 
+export interface Props {
+    heading: string // ALLOWS markdown with `inline` LaTeX
+}
+
+const {
+  heading
+} = Astro.props;
+
 let html: string =  ""
 
 if (Astro.slots.has("default")) {
@@ -9,6 +17,6 @@ if (Astro.slots.has("default")) {
 ---
 
 <aside class="bg-dark-49 text-gray-900 dark:text-white pl-4 py-2 mt-6 border-l-8 border-l-blue-900 text-justify">
-    <p class="font-bold">Just think for a moment:</p>
+    <p class="font-bold">Definition: {heading}</p>
     <p class="mt-2" set:html={html}></p>
 </aside>
