--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -31,14 +31,8 @@ const toc = Astro.props.toc;
         </title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/temml@0.11.10/dist/Temml-Local.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/temml@0.11.10/dist/temmlPostProcess.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/temml@0.11.10/dist/temml.min.js" crossorigin="anonymous"></script>
 
-        <!-- the KaTeX element are only use for JSXGraph equation -->
-        <link 
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.4/katex.min.css"
-        />
-        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.js" integrity="sha384-tsPOhveNsi36uhglzMBNOAA2xd7LlEqQuQHFKi4DwP+6UKrrLGub1MD77Zx18F8e" crossorigin="anonymous"></script>
     </head>
 
     <body class="bg-primary-dark font-roboto text-white text-base leading-loose">
