fix problem with pre element on rendering extra border

--- a/src/components/Globals/CodeBlock.astro
+++ b/src/components/Globals/CodeBlock.astro
@@ -123,7 +123,7 @@ code[class*="language-"]::mozselection {
 }
 pre[class*="language-"] {
   padding: 1em;
-  margin: .5em 0;
+  /*margin: .5em 0;*/
   overflow: auto;
   /* background: #161b22; */
 }
