fix text color into a consistent global text color

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -33,9 +33,8 @@ const toc = Astro.props.toc;
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/temml@0.11.10/dist/Temml-Local.min.css">
         <script src="https://cdn.jsdelivr.net/npm/temml@0.11.10/dist/temml.min.js" crossorigin="anonymous"></script>
 
-    </head>
 
-    <body class="bg-primary-dark font-roboto text-white text-base leading-loose">
+    <body class="bg-primary-dark font-roboto text-primary-white text-base leading-loose">
         <Header currentPage={currentPage} />
         <main class="flex justify-center">
             <!-- <aside class="p-4 w-72 bg-dark-50 absolute left-0 z-50" title="Site Navigation"> -->
