--- a/src/components/Globals/Ol.astro
+++ b/src/components/Globals/Ol.astro
@@ -2,6 +2,6 @@
 const props = Astro.props;
 ---
 
-<ol {...props} class="list-decimal list-outside text-gray-300 ml-6">
+<ol {...props} class="list-decimal list-outside ml-6">
     <slot/>
 </ol>
