--- a/src/components/PageContent/Toc.astro
+++ b/src/components/PageContent/Toc.astro
@@ -45,7 +45,7 @@
 </style>
 
 
-<div id="sticky-element" class="sticky bg-primary-dark font-roboto text-base leading-relaxed border-b border-dark-200 text-gray-300 shadow-xl shadow-primary-dark ">
+<div id="sticky-element" class="sticky bg-primary-dark font-roboto text-base leading-relaxed border-b border-dark-200 shadow-xl shadow-primary-dark ">
     <button id="toggle-button" class="toggle-button">▼</button>
     <ul id="toc-list">
     </ul>
