fix linebreak on external link arrow icon

--- a/src/components/Globals/A.astro
+++ b/src/components/Globals/A.astro
@@ -41,8 +41,8 @@ span.icon-link::before {
   opacity: 0.4;
 }
 
-.link-icon {
-  @apply align-super text-xs border-b-8 border-b-primary-dark;
+.external-link {
+  @apply align-super whitespace-nowrap text-xs;
 }
 
 </style>
